# discourse-retrieval

./: .gitignore  CLAUDE.md  Makefile  README.md  config.toml.sample  pyproject.toml
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
specs/001-discourse-archiver/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-discourse-archiver/checklists/: requirements.md
specs/001-discourse-archiver/contracts/: archive-state-schema.md  cli-interface.md  config-schema.md  state-schema.md
src/discourse_retrieval/: archiver.py  cli.py  client.py  config.py  renderer.py  state.py
tests/integration/: test_archiver.py
tests/unit/: test_archiver.py  test_cli.py  test_client.py  test_config.py  test_renderer.py  test_state.py
